database/networking/database-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-service
  name: db-service
spec:
  type: NodePort
  selector:
    app: test-database
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
