database/networking/database-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-internal-service
spec:
  type: ClusterIP
  selector:
    app: test-database
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
